--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
         "128": "img/icon128.png"
     },
     "content_scripts": [{
-        "matches": ["*://*.amazon.ca/clouddrive/*", "*://*.amazon.com/clouddrive/*"],
+        "matches": ["*://*.amazon.ca/clouddrive/*", "*://*.amazon.com/clouddrive/*", "*://*.amazon.com/photos/*"],
         "js": ["js/jquery.js", "js/background.js"]
     }],
     "manifest_version": 2
